@@ -31,6 +31,7 @@ my $build = Module::Build->new
 			  'Template'    => '2.14',
 			  'TAP::Parser' => '3.10',
 			  'File::Temp'  => '0.17',
+			  'Test::Harness' => '3.21',
 		         },
    build_requires     => {
 			  'Test::More'    => '0.01',
