@@ -15,7 +15,7 @@ jQuery.fn.extend({
 
 $(document).ready(function(){
 	$("div.test-detail").hide();
-	$("div.summary").find("a").click(function(){return false;});
+	$("div#summary").find("a").click(function(){return false;});
 
 	// expand test detail when user clicks on a test file
 	$("a.file").click(function(){
@@ -32,7 +32,7 @@ $(document).ready(function(){
 
 		// highlight a particular test?
 		var testId = $(this).attr("href");
-		if (!testId) {
+		if (testId) {
 		    var $testElem = $detail.find(testId);
 		    $testElem.show().scrollTo(1000);
 		    var bgColor = $testElem.css("background-color");
