@@ -1,6 +1,8 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+
 [%#
 TAP-Formatter-HTML: TT2 Template
-Copyright (c) 2008 Steve Purkis.  All rights reserved.
+Copyright (c) 2008-2010 Steve Purkis.  All rights reserved.
 Released under the same terms as Perl itself.
 
 Developer Notes:
@@ -12,7 +14,7 @@ Developer Notes:
  * The default stylesheets that goes with this are 'default_report.css' & 'default_page.css'
  * The default javascript files are 'jquery-1.2.3-min.js' & 'default_report.js'
 -%]
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<title>[% report.title || 'Test Report' %]</title>
 		[% FOREACH uri IN css_uris %]<link rel="stylesheet" type="text/css" href="[% uri %]" />[% END %]
@@ -40,10 +42,12 @@ Developer Notes:
 		</div>
 
 		<div id="menu">
+          <ul>
 			<li>
 				<span id="show-all"><a href="#" title="show all tests">show all</a></span>
 		    <span id="show-failed"><a href="#" title="show failed tests only">show failed</a></span>
 			</li>
+          </ul>
 		</div>
 
 		<div id="detail">
@@ -56,11 +60,31 @@ Developer Notes:
 						<th class="percent">%</th>
 					</tr>
 				</thead>
+				<tfoot>[%# tfoot must come before tbody %]
+					<tr>
+						<td class="file">[% report.num_files %] files</td>
+						<td class="results">
+							[% report.total %] tests,
+							[% report.passed %] ok,
+							[% report.failed %] failed,
+							[% report.todo %] todo,
+							[% report.skipped %] skipped,
+							[% report.parse_errors %] parse errors<br/>
+							exit status: [% report.exit %],
+							wait status: [% report.wait %]<br/>
+							elapsed time: [% report.elapsed_time | trim %]</td>
+						<td class="time">[% report.total_time | format('%.2fs') %]</td>
+						<td class="percent [% report.test_status -%]
+											 [%- IF report.severity %][% ' severity-' _ report.severity %][% END -%]
+											 [%- IF report.todo_passed %] todo-passed[% END %]">[% report.percent_passed %]%</td>
+					</tr>
+				</tfoot>
 				<tbody>
 					[%- FOREACH test IN report.tests %]
 					<tr class="test-run [% test.test_status -%]
 										 [%- IF test.severity %][% ' severity-' _ test.severity %][% END -%]
-										 [%- IF test.todo_passed %] todo-passed[% END %]" id="[% test.html_id %]">
+										 [%- IF test.todo_passed %] todo-passed[% END %]"
+										 [%- IF test.html_id %] id="[% test.html_id %]"[% END %]>
 						<td class="file c">
 							<a class="file" href="#" title="Test [% IF test.has_problems %]failed![% ELSE %]ok.[% END %]
 [% IF test.num_parse_errors %]	[% test.num_parse_errors %] parse error(s)!
@@ -84,20 +108,22 @@ Developer Notes:
 							[%- SET max_tests = test.tests_run IF test.tests_run AND test.tests_run > max_tests %]
 							<table class="TS">[%# TS=Test Summary. Note: use a table to caulculate widths automatically %]
 								<tr>
-									[%- IF test.tests_run AND test.tests_run > 0 -%]
+									[% IF test.tests_run AND test.tests_run > 0 -%]
 										[%- SET current_test = 0 -%]
 									  [%- FOREACH result IN test.results -%]
-									  [%- IF result.is_test %]
-										[%- current_test = current_test + 1 -%]
-										<td class="[% result.short_test_status _ ' ' %][% IF result.is_ok %]p[% ELSE %]f[% END %]"><a class="TS" href="#[% result.html_id %]"> </a></td>
-								[%#-
-								Note: break up the tests at 100 so as to preserve sanity.
-								This may leave some tests looking silly (if there's only 101)
-								but in the case of 1000s of tests, it makes this more readable.
-								-%]
-										[%- IF (current_test % 100) == 0 %]
-								</tr><tr>[%- END -%]
-								    [%- END -%]
+									  	[%- IF result.is_test %]
+												[%#-
+													Note: break up the tests at 100 so as to preserve sanity.
+													This may leave some tests looking silly (if there's only 101)
+													but in the case of 1000s of tests, it makes this more readable.
+													We do this before incrementing the counter to avoid the first
+													row being off by 1.
+												-%]
+												[%- IF current_test > 0 && (current_test % 100) == 0 %]
+								</tr><tr>[%- END %]
+												[%- current_test = current_test + 1 -%]
+									<td class="[% result.short_test_status _ ' ' %][% IF result.is_ok %]p[% ELSE %]f[% END %]"><a class="TS" href="#[% result.html_id %]"> </a></td>
+								    	[%- END -%]
 										[%- END -%]
 									[%- ELSIF test.skip_all -%][%# below: class 's' = skip-ok -%]
 									<td class="s" width="100%"><a class="TS" href="#" title="[% test.results.first.raw | html %]">&nbsp;</a></td>
@@ -107,7 +133,7 @@ Developer Notes:
 								</tr>
 							</table>
 							<div class="test-detail">
-								[%- IF test.parse_errors %]
+								[%- IF test.parse_errors.size > 0 %]
 								<ul class="parse-errors">
 									[%- FOREACH e IN test.parse_errors %]
 									<li>Parse error: [% e %]</li>
@@ -118,7 +144,7 @@ Developer Notes:
 									[%- FOREACH result IN test.results %]
 									<li [% IF result.is_test %]id="[% result.html_id %]" [% END -%]class="[% result.css_type -%]
 														 [%- IF result.is_test %][% ' ' _ result.short_test_status -%][%- END -%]
-														 [%- IF result.is_unplanned %] unp[% END -%]">[% result.raw | html -%]
+														 [%- IF result.is_unplanned %] unp[% END -%]">[% result.raw | html -%]&nbsp;
 										[%- IF result.is_unplanned %]<em> (unplanned!)</em>[% END -%]
 										[%- IF result.todo_passed %]<em> (unexpectedly succeeded!)</em>[% END %]</li>
 									[%- END -%]
@@ -133,26 +159,6 @@ Developer Notes:
 					</tr>
 					[%- END %]
 				</tbody>
-	
-				<tfoot>
-					<tr>
-						<td class="file">[% report.num_files %] files</td>
-						<td class="results">
-							[% report.total %] tests,
-							[% report.passed %] ok,
-							[% report.failed %] failed,
-							[% report.todo %] todo,
-							[% report.skipped %] skipped,
-							[% report.parse_errors %] parse errors<br/>
-							exit status: [% report.exit %],
-							wait status: [% report.wait %]<br/>
-							elapsed time: [% report.elapsed_time | trim %]</td>
-						<td class="time">[% report.total_time | format('%.2fs') %]</td>
-						<td class="percent [% report.test_status -%]
-											 [%- IF report.severity %][% ' severity-' _ report.severity %][% END -%]
-											 [%- IF report.todo_passed %] todo-passed[% END %]">[% report.percent_passed %]%</td>
-					</tr>
-				</tfoot>
 			</table>
 		</div>
 
