@@ -6,6 +6,16 @@ All changes by Steve Purkis, unless otherwise noted.
 0.09
     +	updated App::Prove::Plugin::HTML to simplify cmdline usage to the
 	extent possible.
+    +	fixed RT #41457: applied Neil Hemingway & Panu Ervamaa's patches, and
+	got everything working.  This addresses:
+	    +	small changes to the top-left corner menu (default_report.css)
+		to render it corretly with Firefox 3 (Linux)
+	    +	inline_js fix
+	    +	added support for force_inline_js (not on by default)
+	    +	fixed bug in handling of parse_errors in default_report.tt
+	    +	XHTML support
+    +	fixed bug: click on summary changes location
+
 
 0.08
     +	applied Steffen Schwigon's patch to display YAML TAP as
